--- a/generators/server/templates/src/main/java/package/service/dto/UserDTO.java.ejs
+++ b/generators/server/templates/src/main/java/package/service/dto/UserDTO.java.ejs
@@ -15,73 +15,31 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
- * A DTO representing a user, with their authorities.
+ * A DTO representing a user, with only the public attributes.
  */
 @Introspected
-public class UserDTO %> {
+public class <%= asDto('User') %> {
 
-    private <% if (authenticationType === 'oauth2') { %>String<% } else { %>Long<% } %> id;
-
-    @NotBlank
-    @Pattern(regexp = Constants.LOGIN_REGEX)
-    @Size(min = 1, max = 50)
+    private <%= userPkType %> id;
     private String login;
 
-    @Size(max = 50)
-    private String firstName;
-
-    @Size(max = 50)
-    private String lastName;
-
-    @Email
-    @Size(min = 5, max = 254)
-    private String email;
-
-    @Size(max = 256)
-    private String imageUrl;
-
-    private boolean activated = false;
-
-    @Size(min = 2, max = 6)
-    private String langKey;
-
-    private String createdBy;
-
-    private Instant createdDate;
-
-    private String lastModifiedBy;
-
-    private Instant lastModifiedDate;
-
-    private Set<String> authorities;
-
-    public UserDTO() {
+    <%_ if (databaseType !== 'no') { _%>
+    public <%= asDto('User') %>() {
         // Empty constructor needed for Jackson.
     }
 
-    public UserDTO(User user) {
+    public <%= asDto('User') %>(<%= asEntity('User') %> user) {
         this.id = user.getId();
+        // Customize it here if you need firstName/lastName/etc
         this.login = user.getLogin();
-        this.firstName = user.getFirstName();
-        this.lastName = user.getLastName();
-        this.email = user.getEmail();
-        this.activated = user.getActivated();
-        this.imageUrl = user.getImageUrl();
-        this.langKey = user.getLangKey();
-        //this.createdBy = user.getCreatedBy();
-        this.createdDate = user.getCreatedDate();
-        //this.lastModifiedBy = user.getLastModifiedBy();
-        this.lastModifiedDate = user.getLastModifiedDate();
-        this.authorities = user.getAuthorities().stream()
-            .map(Authority::getName)
-            .collect(Collectors.toSet());
     }
 
-    public <% if (authenticationType === 'oauth2') { %>String<% } else { %>Long<% } %> getId() {
+    <%_ } _%>
+    public <%= userPkType %> getId() {
         return id;
     }
 
-    public void setId(<% if (authenticationType === 'oauth2') { %>String<% } else { %>Long<% } %> id) {
+    public void setId(<%= userPkType %> id) {
         this.id = id;
     }
 
@@ -93,93 +51,13 @@ public class UserDTO %> {
         this.login = login;
     }
 
-    public String getFirstName() {
-        return firstName;
-    }
-
-    public void setFirstName(String firstName) {
-        this.firstName = firstName;
-    }
-
-    public String getLastName() {
-        return lastName;
-    }
-
-    public void setLastName(String lastName) {
-        this.lastName = lastName;
-    }
-
-    public String getEmail() {
-        return email;
-    }
-
-    public void setEmail(String email) {
-        this.email = email;
-    }
-
-    public String getImageUrl() {
-        return imageUrl;
-    }
-
-    public void setImageUrl(String imageUrl) {
-        this.imageUrl = imageUrl;
-    }
-
-    public boolean isActivated() {
-        return activated;
-    }
-
-    public void setActivated(boolean activated) {
-        this.activated = activated;
-    }
-
-    public String getLangKey() {
-        return langKey;
-    }
-
-    public void setLangKey(String langKey) {
-        this.langKey = langKey;
-    }
-
-    public Instant getCreatedDate() {
-        return createdDate;
-    }
-
-    public void setCreatedDate(Instant createdDate) {
-        this.createdDate = createdDate;
-    }
-
-    public Instant getLastModifiedDate() {
-        return lastModifiedDate;
-    }
-
-    public void setLastModifiedDate(Instant lastModifiedDate) {
-        this.lastModifiedDate = lastModifiedDate;
-    }
-
-    public Set<String> getAuthorities() {
-        return authorities;
-    }
-
-    public void setAuthorities(Set<String> authorities) {
-        this.authorities = authorities;
-    }
-
+    // prettier-ignore
     @Override
     public String toString() {
-        return "UserDTO{" +
-            "login='" + login + '\'' +
-            ", firstName='" + firstName + '\'' +
-            ", lastName='" + lastName + '\'' +
-            ", email='" + email + '\'' +
-            ", imageUrl='" + imageUrl + '\'' +
-            ", activated=" + activated +
-            ", langKey='" + langKey + '\'' +
-            ", createdBy=" + createdBy +
-            ", createdDate=" + createdDate +
-            ", lastModifiedBy='" + lastModifiedBy + '\'' +
-            ", lastModifiedDate=" + lastModifiedDate +
-            ", authorities=" + authorities +
+        return "<%= asDto('User') %>{" +
+            "id='" + id + '\'' +
+            ", login='" + login + '\'' +
             "}";
     }
+
 }
