--- a/generators/server/templates/src/test/java/package/web/rest/UserResourceIT.java.ejs
+++ b/generators/server/templates/src/test/java/package/web/rest/UserResourceIT.java.ejs
@@ -14,6 +14,7 @@ import <%=packageName%>.security.AuthoritiesConstants;
 <%_ if (authenticationType !== 'oauth2') { _%>
 import <%=packageName%>.service.MailService;
 <%_ } _%>
+import <%=packageName%>.service.dto.AdminUserDTO;
 import <%=packageName%>.service.dto.UserDTO;
 import <%=packageName%>.service.mapper.UserMapper;
 import <%=packageName%>.web.rest.vm.ManagedUserVM;
@@ -175,7 +176,7 @@ public class UserResourceIT {
         managedUserVM.setLangKey(DEFAULT_LANGKEY);
         managedUserVM.setAuthorities(Collections.singleton(AuthoritiesConstants.USER));
 
-        HttpResponse<User> response = client.exchange(HttpRequest.POST("/api/users", managedUserVM), User.class).blockingFirst();
+        HttpResponse<User> response = client.exchange(HttpRequest.POST("/api/admin/users", managedUserVM), User.class).blockingFirst();
 
         assertThat(response.status().getCode()).isEqualTo(HttpStatus.CREATED.getCode());
 
@@ -208,7 +209,7 @@ public class UserResourceIT {
         managedUserVM.setAuthorities(Collections.singleton(AuthoritiesConstants.USER));
 
         // An entity with an existing ID cannot be created, so this API call must fail
-        HttpResponse<User> response = client.exchange(HttpRequest.POST("/api/users", managedUserVM), User.class).onErrorReturn(t -> (HttpResponse<User>) ((HttpClientResponseException) t).getResponse()).blockingFirst();
+        HttpResponse<User> response = client.exchange(HttpRequest.POST("/api/admin/users", managedUserVM), User.class).onErrorReturn(t -> (HttpResponse<User>) ((HttpClientResponseException) t).getResponse()).blockingFirst();
 
         assertThat(response.status().getCode()).isEqualTo(HttpStatus.BAD_REQUEST.getCode());
 
@@ -233,7 +234,7 @@ public class UserResourceIT {
         managedUserVM.setAuthorities(Collections.singleton(AuthoritiesConstants.USER));
 
         // Create the User
-        HttpResponse<User> response = client.exchange(HttpRequest.POST("/api/users", managedUserVM), User.class).onErrorReturn(t -> (HttpResponse<User>) ((HttpClientResponseException) t).getResponse()).blockingFirst();
+        HttpResponse<User> response = client.exchange(HttpRequest.POST("/api/admin/users", managedUserVM), User.class).onErrorReturn(t -> (HttpResponse<User>) ((HttpClientResponseException) t).getResponse()).blockingFirst();
 
         assertThat(response.status().getCode()).isEqualTo(HttpStatus.BAD_REQUEST.getCode());
 
@@ -258,7 +259,7 @@ public class UserResourceIT {
         managedUserVM.setAuthorities(Collections.singleton(AuthoritiesConstants.USER));
 
         // Create the User
-        HttpResponse<User> response = client.exchange(HttpRequest.POST("/api/users", managedUserVM), User.class).onErrorReturn(t -> (HttpResponse<User>) ((HttpClientResponseException) t).getResponse()).blockingFirst();
+        HttpResponse<User> response = client.exchange(HttpRequest.POST("/api/admin/users", managedUserVM), User.class).onErrorReturn(t -> (HttpResponse<User>) ((HttpClientResponseException) t).getResponse()).blockingFirst();
 
         assertThat(response.status().getCode()).isEqualTo(HttpStatus.BAD_REQUEST.getCode());
 
@@ -271,7 +272,7 @@ public class UserResourceIT {
     @Test
     public void getAllUsers() throws Exception {
         // Get all the users
-        List<User> users = client.retrieve(HttpRequest.GET("/api/users?sort=id,desc"), Argument.listOf(User.class)).blockingFirst();
+        List<User> users = client.retrieve(HttpRequest.GET("/api/admin/users?sort=id,desc"), Argument.listOf(User.class)).blockingFirst();
 
         assertThat(users.get(0).getLogin()).isEqualTo(DEFAULT_LOGIN);
         assertThat(users.get(0).getFirstName()).isEqualTo(DEFAULT_FIRSTNAME);
@@ -288,7 +289,7 @@ public class UserResourceIT {
 
         <%_ } _%>
         // Get the user
-        User u = client.retrieve(HttpRequest.GET("/api/users/" + user.getLogin()), User.class).blockingFirst();
+        User u = client.retrieve(HttpRequest.GET("/api/admin/users/" + user.getLogin()), User.class).blockingFirst();
 
         assertThat(u.getLogin()).isEqualTo(user.getLogin());
         assertThat(u.getFirstName()).isEqualTo(DEFAULT_FIRSTNAME);
@@ -304,7 +305,7 @@ public class UserResourceIT {
 
     @Test
     public void getNonExistingUser() throws Exception {
-        HttpResponse<User> response = client.exchange(HttpRequest.GET("/api/users/unknown"), User.class).onErrorReturn(t -> (HttpResponse<User>) ((HttpClientResponseException) t).getResponse()).blockingFirst();
+        HttpResponse<User> response = client.exchange(HttpRequest.GET("/api/admin/users/unknown"), User.class).onErrorReturn(t -> (HttpResponse<User>) ((HttpClientResponseException) t).getResponse()).blockingFirst();
 
         assertThat(response.getStatus().getCode()).isEqualTo(HttpStatus.NOT_FOUND.getCode());
     }
@@ -330,7 +331,7 @@ public class UserResourceIT {
         managedUserVM.setLastModifiedDate(updatedUser.getLastModifiedDate());
         managedUserVM.setAuthorities(Collections.singleton(AuthoritiesConstants.USER));
 
-        HttpResponse<User> response = client.exchange(HttpRequest.PUT("/api/users", managedUserVM), User.class).onErrorReturn(t -> (HttpResponse<User>) ((HttpClientResponseException) t).getResponse()).blockingFirst();
+        HttpResponse<User> response = client.exchange(HttpRequest.PUT("/api/admin/users", managedUserVM), User.class).onErrorReturn(t -> (HttpResponse<User>) ((HttpClientResponseException) t).getResponse()).blockingFirst();
 
         assertThat(response.status().getCode()).isEqualTo(HttpStatus.OK.getCode());
 
@@ -368,7 +369,7 @@ public class UserResourceIT {
         managedUserVM.setLastModifiedDate(oldUser.getLastModifiedDate());
         managedUserVM.setAuthorities(Collections.singleton(AuthoritiesConstants.USER));
 
-        HttpResponse<User> response = client.exchange(HttpRequest.PUT("/api/users", managedUserVM), User.class).onErrorReturn(t -> (HttpResponse<User>) ((HttpClientResponseException) t).getResponse()).blockingFirst();
+        HttpResponse<User> response = client.exchange(HttpRequest.PUT("/api/admin/users", managedUserVM), User.class).onErrorReturn(t -> (HttpResponse<User>) ((HttpClientResponseException) t).getResponse()).blockingFirst();
 
         assertThat(response.status().getCode()).isEqualTo(HttpStatus.OK.getCode());
 
@@ -416,7 +417,7 @@ public class UserResourceIT {
         managedUserVM.setLastModifiedDate(updatedUser.getLastModifiedDate());
         managedUserVM.setAuthorities(Collections.singleton(AuthoritiesConstants.USER));
 
-        HttpResponse<User> response = client.exchange(HttpRequest.PUT("/api/users", managedUserVM), User.class).onErrorReturn(t -> (HttpResponse<User>) ((HttpClientResponseException) t).getResponse()).blockingFirst();
+        HttpResponse<User> response = client.exchange(HttpRequest.PUT("/api/admin/users", managedUserVM), User.class).onErrorReturn(t -> (HttpResponse<User>) ((HttpClientResponseException) t).getResponse()).blockingFirst();
 
         assertThat(response.status().getCode()).isEqualTo(HttpStatus.BAD_REQUEST.getCode());
 
@@ -454,7 +455,7 @@ public class UserResourceIT {
         managedUserVM.setLastModifiedDate(updatedUser.getLastModifiedDate());
         managedUserVM.setAuthorities(Collections.singleton(AuthoritiesConstants.USER));
 
-        HttpResponse<User> response = client.exchange(HttpRequest.PUT("/api/users", managedUserVM), User.class).onErrorReturn(t -> (HttpResponse<User>) ((HttpClientResponseException) t).getResponse()).blockingFirst();
+        HttpResponse<User> response = client.exchange(HttpRequest.PUT("/api/admin/users", managedUserVM), User.class).onErrorReturn(t -> (HttpResponse<User>) ((HttpClientResponseException) t).getResponse()).blockingFirst();
 
         assertThat(response.status().getCode()).isEqualTo(HttpStatus.BAD_REQUEST.getCode());
 
@@ -468,7 +469,7 @@ public class UserResourceIT {
 
         // Delete the user
 
-        HttpResponse<User> response = client.exchange(HttpRequest.DELETE("/api/users/" + user.getLogin()), User.class).onErrorReturn(t -> (HttpResponse<User>) ((HttpClientResponseException) t).getResponse()).blockingFirst();
+        HttpResponse<User> response = client.exchange(HttpRequest.DELETE("/api/admin/users/" + user.getLogin()), User.class).onErrorReturn(t -> (HttpResponse<User>) ((HttpClientResponseException) t).getResponse()).blockingFirst();
 
         assertThat(response.status().getCode()).isEqualTo(HttpStatus.NO_CONTENT.getCode());
         <%_ if (usesCache) { _%>
@@ -488,7 +489,7 @@ public class UserResourceIT {
     @Test
     public void getAllAuthorities() throws Exception {
 
-        HttpResponse<List<String>> response = client.exchange(HttpRequest.GET("/api/users/authorities"), Argument.listOf(String.class)).onErrorReturn(t -> (HttpResponse<List<String>>) ((HttpClientResponseException) t).getResponse()).blockingFirst();
+        HttpResponse<List<String>> response = client.exchange(HttpRequest.GET("/api/authorities"), Argument.listOf(String.class)).onErrorReturn(t -> (HttpResponse<List<String>>) ((HttpClientResponseException) t).getResponse()).blockingFirst();
 
         assertThat(response.status().getCode()).isEqualTo(HttpStatus.OK.getCode());
         assertThat(response.body()).contains(AuthoritiesConstants.USER);
@@ -522,7 +523,7 @@ public class UserResourceIT {
 
     @Test
     public void testUserDTOtoUser() {
-        UserDTO userDTO = new UserDTO();
+        AdminUserDTO userDTO = new AdminUserDTO();
         userDTO.setId(DEFAULT_ID);
         userDTO.setLogin(DEFAULT_LOGIN);
         userDTO.setFirstName(DEFAULT_FIRSTNAME);
@@ -558,7 +559,7 @@ public class UserResourceIT {
         authorities.add(authority);
         user.setAuthorities(authorities);
 
-        UserDTO userDTO = userMapper.userToUserDTO(user);
+        AdminUserDTO userDTO = userMapper.userToAdminUserDTO(user);
 
         assertThat(userDTO.getId()).isEqualTo(DEFAULT_ID);
         assertThat(userDTO.getLogin()).isEqualTo(DEFAULT_LOGIN);
